<resources>
    <string name="app_name">Warframe Market</string>
    <string name="warframe_capital">WARFRAME 8 MARKET</string>
    <string name="home">Home</string>
    <string name="market">Market</string>
    <string name="search_item_name">Search for the name of the item</string>
    <string name="search">Search…</string>
    <string name="contracts">Contracts</string>
    <string name="profile">Profile</string>
    <string name="select">Select</string>
    <string name="eh_necesario_selecionar">É necessário selecionar %s</string>
    <string name="sync">Synchonize</string>
    <string name="item_ja_existe">Item already exists</string>
    <string name="necessario_informar_item">Necessário informar item</string>
    <string name="login">Login</string>
    <string name="items">Items</string>
    <string name="create_contract">Create Contract</string>
    <string name="place_order">Place Order</string>
    <string name="no_results_returned">No results returned</string>
    <string name="error_ocurred_while_returning_results">An error occurred while returning results</string>
    <string name="back_to_app">Go back to App</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="your_password">Your password</string>
    <string name="your_email">Your email</string>
    <string name="login_success">Success on Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="orders">orders</string>
    <string name="username">username</string>
    <string name="reputation">Reputation:</string>
    <string name="platform">platform</string>
    <string name="language">language</string>
    <string name="reputation_value">0</string>
    <string name="wanting_to_sell">wts</string>
    <string name="xaku_prime_set">Xaku Prime Set</string>
    <string name="item_quantity">1</string>
    <string name="platinum_quantity">100</string>
    <string name="platinum_each">Platinum each</string>
    <string name="sold">Sold</string>
    <string name="edit">Edit</string>
    <string name="plus_one_item_quantity">+1</string>
    <string name="visible">Visible</string>
    <string name="tenet_cycron">Tenet Cycron</string>
    <string name="damage">Damage:</string>
    <string name="damage_number">25</string>
    <string name="quirk">Quirk:</string>
    <string name="quirk_value">Allergic to Nature</string>
    <string name="element">Element:</string>
    <string name="element_value">Magnetic</string>
    <string name="selling_price">Selling price:</string>
    <string name="selling_price_value">100</string>
    <string name="starting_price">Starting price:</string>
    <string name="no_bids_so_far">No bids so far</string>
    <string name="hidden">Hidden</string>
    <string name="order_sold">Order Marked as Sold!</string>
    <string name="delete">Delete Order</string>
    <string name="order_edited">Order Edited!</string>
    <string name="order_deleted">Order Deleted!</string>
    <string name="delete_message">Are you sure you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="category_of_the_item">Search for the Item Category</string>
    <string name="weapon_name">Search for the Weapon name</string>
    <string name="category">Category</string>
    <string name="weapon">Weapon</string>
    <string name="riven">Unveiled Riven Mods</string>
    <string name="kuva">Kuva Lich</string>
    <string name="sister">Sisters of Parvos</string>
</resources>