<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true"
    android:clickable="true"
    android:id="@+id/card_view_frag_profile_contracts"
    android:backgroundTint="@color/background_color">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/logo_alpha"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/image_view_card_view_profile_contracts"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tenet_cycron"
            android:textColor="@color/asset_teal"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/image_view_card_view_profile_contracts"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="28dp"
            android:id="@+id/txt_card_view_fragment_contracts_item_title" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/grey_item_quantity"
            android:layout_marginVertical="8dp"
            app:layout_constraintTop_toBottomOf="@id/btn_profile_order_edit"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="20dp"
            android:id="@+id/view_card_view_fragment_contracts"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/damage"
            android:textColor="@color/grey_item_quantity"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/view_card_view_fragment_contracts"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:id="@+id/txt_card_view_fragment_contracts_damage" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/damage_number"
            android:textColor="@color/grey_reputation"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/txt_card_view_fragment_contracts_damage"
            app:layout_constraintTop_toBottomOf="@id/view_card_view_fragment_contracts"
            android:layout_marginStart="5dp"
            android:id="@+id/txt_card_view_fragment_contracts_damage_number"
            android:layout_marginTop="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quirk"
            android:textColor="@color/grey_item_quantity"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_card_view_fragment_contracts_damage"
            android:layout_marginStart="20dp"
            android:id="@+id/txt_card_view_fragment_contracts_quirk"
            android:layout_marginTop="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quirk_value"
            android:textColor="@color/grey_reputation"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/txt_card_view_fragment_contracts_quirk"
            app:layout_constraintTop_toBottomOf="@id/txt_card_view_fragment_contracts_damage"
            android:layout_marginStart="5dp"
            android:id="@+id/txt_card_view_fragment_contracts_quirk_value"
            android:layout_marginTop="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/element"
            android:textColor="@color/grey_item_quantity"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_card_view_fragment_contracts_quirk"
            android:layout_marginStart="20dp"
            android:id="@+id/txt_card_view_fragment_contracts_element"
            android:layout_marginTop="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/element_value"
            android:textColor="@color/grey_reputation"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/txt_card_view_fragment_contracts_element"
            app:layout_constraintTop_toBottomOf="@id/txt_card_view_fragment_contracts_quirk_value"
            android:layout_marginStart="5dp"
            android:id="@+id/txt_card_view_fragment_contracts_element_value"
            android:layout_marginTop="2dp"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_profile_order_sold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/asset_teal_opacity"
            android:text="@string/sold"
            android:textColor="#FFC1C1C1"
            app:icon="@drawable/ic_sold"
            app:iconTint="@color/asset_teal"
            app:iconGravity="textEnd"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearance="@style/roundedButtonShape"
            app:strokeColor="@color/asset_teal"
            app:strokeWidth="1dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="6dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_profile_order_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/asset_teal_opacity"
            android:text="@string/edit"
            android:textColor="#FFC1C1C1"
            app:icon="@drawable/ic_edit"
            app:iconTint="@color/asset_teal"
            app:iconGravity="textEnd"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@id/btn_profile_order_sold"
            app:layout_constraintEnd_toEndOf="parent"
            app:shapeAppearance="@style/roundedButtonShape"
            app:strokeColor="@color/asset_teal"
            app:strokeWidth="1dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visible"
            android:textColor="@color/green_user_online"
            android:textSize="15sp"
            app:layout_constraintTop_toBottomOf="@id/txt_card_view_fragment_contracts_element"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_card_view_fragment_contracts"
            android:id="@+id/layout_card_view_fragment_contracts_price"
            android:layout_marginTop="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selling_price"
            android:textSize="15sp"
            android:textColor="@color/grey_reputation"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/txt_card_view_fragment_contracts_selling_price_label"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selling_price_value"
            android:textColor="@color/grey_reputation"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@id/image_view_fragment_profile_contracts_platinum"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/txt_card_view_fragment_contracts_selling_price"
            android:layout_marginEnd="5dp"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_coin"
            app:tint="@color/grey_reputation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/image_view_fragment_profile_contracts_platinum"
            android:layout_marginVertical="5dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starting_price"
            android:textSize="15sp"
            android:textColor="@color/grey_reputation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/txt_card_view_fragment_contracts_selling_price"
            app:layout_constraintTop_toBottomOf="@id/txt_card_view_fragment_contracts_selling_price_label"
            android:id="@+id/txt_card_view_fragment_contracts_starting_price_label"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selling_price_value"
            android:textColor="@color/grey_reputation"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@id/image_view_fragment_profile_contracts_platinum"
            app:layout_constraintTop_toBottomOf="@id/txt_card_view_fragment_contracts_selling_price"
            android:id="@+id/txt_card_view_fragment_contracts_starting_price"
            android:layout_marginEnd="5dp"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_coin"
            app:tint="@color/grey_reputation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view_fragment_profile_contracts_platinum"
            android:id="@+id/image_view_fragment_profile_contracts_starting_platinum"
            android:layout_marginVertical="4dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_bids_so_far"
            android:textColor="@color/grey_reputation"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_card_view_fragment_contracts_starting_price_label"

            android:id="@+id/txt_card_view_fragment_contracts_bids"
            android:layout_marginEnd="15dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>