<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.Fragment_Market"
    android:background="@color/dark_background">
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="0dp"
        android:paddingVertical="20dp">

        <com.fukajima.warframemarket.components.CustomSpinner
            android:id="@+id/market_searchSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:searchDialog="true"
            app:titleText="@string/items"
            app:hintText="@string/search_item_name"
            android:paddingHorizontal="15dp">

        </com.fukajima.warframemarket.components.CustomSpinner>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:paddingVertical="10dp"
            android:paddingHorizontal="15dp">
            <ImageView
                android:id="@+id/home_iv_item"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/logo_alpha"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Reliquia Axi A1"
                android:textStyle="bold"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@id/home_iv_item"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="15sp"
                tools:text="Vaulted"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycler_view_frag_market"
            tools:listitem="@layout/card_view_fragment_market"
            android:visibility="visible"
            android:paddingHorizontal="10dp">

        </androidx.recyclerview.widget.RecyclerView>



    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="20dp"
        android:src="@drawable/ic_add"
        android:backgroundTint="@color/orange"
        app:tint="@color/white"
        android:id="@+id/float_act_btn_fragment_market"
        android:contentDescription="@string/place_order">

    </com.google.android.material.floatingactionbutton.FloatingActionButton>


</FrameLayout>